# graybox-cloak

./: .dockerignore  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mora-cloak-proof.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/api-gateway/: Dockerfile  package-lock.json  package.json  send-sol-private.ts  tsconfig.json
apps/api-gateway/src/: auth.ts  cloak.ts  index.ts  mora-relay.ts  routes.ts  stealth.ts
apps/api-gateway/src/routes/: demo.ts
apps/api-gateway/src/store/: index.ts  memory.ts  postgres.ts  types.ts
apps/api-gateway/tests/: api.test.ts  vector.test.ts
apps/dashboard/: next.config.ts  package.json
