[workspace]
members = [
    "programs/*",
    "crates/*",
]
default-members = [
    "programs/*",
    "crates/stealth-core",
    "crates/indexer",
    "crates/relayer",
    "crates/oracle-adapter",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["g-pay"]

[workspace.dependencies]
anchor-lang = "1.0.1"
anchor-spl = { version = "1.0.1", features = ["token", "token_2022"] }

curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "digest", "zeroize"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "rand_core", "zeroize"] }
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
rand = "0.8"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
hex = "0.4"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
